# leech-compiler

./: .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  format_check.yml
cmake/: clang_format.cmake  comp_flags.cmake
docs/: CMakeLists.txt
include/analysis/: liveness.hh  loop_analyzer.hh  regalloc.hh
include/common/: common.hh  error.hh  opcodes.hh  opcodes.ii
include/graph/: dfs.hh  dom_tree.hh  dom_tree_helpers.hh  dom_tree_node.hh  dom_tree_types.hh  dsu.hh  graph_traits.hh
include/instruction/: inst.hh
include/intrusive_list/: intrusive_list.hh
include/ir/: basic_block.hh  function.hh  inst.hh
include/opt/: checks_elimination.hh  constant_folding.hh  inlining.hh  peephole.hh
src/: CMakeLists.txt
src/inst/: CMakeLists.txt  inst.cc
src/intrusive_list/: CMakeLists.txt  intrusive_list.cc
test/unit/: CMakeLists.txt
test/unit/analysis/: CMakeLists.txt  linear_order_test.cc  liveness_test.cc  loop_analyzer_test.cc  regalloc_test.cc
test/unit/common/: CMakeLists.txt  opcodes.cc
test/unit/example/: CMakeLists.txt  example.cc
test/unit/graph/: CMakeLists.txt  dfs_test.cc  dom_tree_test.cc  graph_test_builder.hh
test/unit/intrusive_list/: CMakeLists.txt  intrusive_list_test.cc
test/unit/ir/: CMakeLists.txt  basic_block_test.cc  graph_test.cc
test/unit/opt/: CMakeLists.txt  checks_elimination.cc  constant_folding.cc  inlining.cc  peephole.cc
tools/: CMakeLists.txt
tools/jit/: main.cc
tools/ljit/: CMakeLists.txt  main.cc
